# 192-crewai-groq-llama3

./: pyproject.toml
app/: multiagent.py
