[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["julio4ai <juliocolomer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "^0.28.8"
beautifulsoup4 = "^4.12.3"
langchain-groq = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
